Update ad added data

--- a/Lesson1_1.ipynb
+++ b/Lesson1_1.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "For this series of lesson I'll use [**GitHub**](https://github.com/) to store and share the materials.\n",
     "\n",
-    "The repository is located on this page: **https://github.com/SalMarco/Cattolica2019**."
+    "The repository for this lesson is located on this page: **https://github.com/SalMarco/Cattolica_2020_Lesson2**."
    ]
   },
   {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -472,12 +472,38 @@
    "source": [
     "v_int=str(v_int)\n",
     "print(type(v_int))\n",
-    "print('type of v_int',type(v_float),v_float)"
+    "print('type of v_float',type(v_float),str(v_float))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NOTE**: Python has dynamic types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v_int=float(v_int)\n",
+    "print('type of v_int',type(v_int),v_int)\n",
+    "v_int=float('15.5')\n",
+    "print('type of v_int',type(v_int),v_int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's consider two peculiar cases:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -488,38 +514,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "type of v_bool <class 'str'> False\n",
+      "type of v_bool <class 'int'> 0\n",
       "type of v_int <class 'float'> 1.0\n"
      ]
     }
    ],
    "source": [
-    "v_bool=str(v_bool)\n",
-    "print('type of v_bool',type(v_bool),v_bool)\n",
-    "v_int=float(v_int)\n",
-    "print('type of v_int',type(v_int),v_int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "type of v_int <class 'float'> 15.5\n"
-     ]
-    }
-   ],
-   "source": [
-    "v_int=float('15.5')\n",
-    "print('type of v_int',type(v_int),v_int)"
+    "v_bool=int(v_bool)\n",
+    "print('type of v_bool',type(v_bool),v_bool)"
    ]
   },
   {
@@ -545,6 +547,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of v_int <class 'int'> 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "v_float=int(15.6)\n",
+    "print('type of v_int',type(v_float),v_float)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -556,7 +580,7 @@
     "  - b = 2.0\n",
     "  - c = int(b)\n",
     "  - d = a/c\n",
-    "  - e = '5.6'\n",
+    "  - e = '5.5'\n",
     "  - f = int(e) \n",
     "  \n",
     "What's the real value of `f`? \n",
@@ -580,16 +604,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "a=1\n",
-    "b=2.0\n",
-    "c= int(b)\n",
-    "c\n",
-    "type(c/a)\n",
-    "e='5.6'\n",
-    "f=float(e)\n",
-    "f"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -625,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -647,7 +662,7 @@
        "1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -704,7 +719,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-a0f5082a2e0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ml1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ml1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-a0f5082a2e0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ml1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ml1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -723,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -794,8 +809,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 2, 3, 20]\n",
-      "[10, 2, 3, 20, 20]\n"
+      "[1, 2, 3]\n",
+      "[1, 2, 3, 20]\n"
      ]
     }
    ],
@@ -809,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -820,7 +835,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now l1 is : [10, 2, 3, 20, 20]\n"
+      "Now l1 is : [1, 2, 3, 20]\n"
      ]
     }
    ],
@@ -830,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -841,7 +856,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "l1_2 with the new first element: [10, 2, 3, 20, 20]\n"
+      "l1_2 with the new first element: [10, 2, 3, 20]\n"
      ]
     }
    ],
@@ -852,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -863,7 +878,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 2, 3, 20, 20, 4, 5, 6]\n"
+      "[10, 2, 3, 20, 4, 5, 6]\n"
      ]
     }
    ],
@@ -875,13 +890,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, [4, 5, 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "l3=[1,2,3]\n",
     "l3.append(l2_2)\n",
@@ -926,6 +949,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I can also remove elements from list.\n",
+    "We have many ways:\n",
+    "  1. by position: del\n",
+    "  2. by value: remove()\n",
+    "  3. by position an return the value: pop()\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n",
+      "After del 0 [1, 2, 3, 4, 5]\n",
+      "After remove 4 [1, 2, 3, 5]\n",
+      "The value of the position 0 is: 1\n",
+      "[2, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l6=[i for i in range(0,6)]\n",
+    "print(l6)\n",
+    "del l6[0]\n",
+    "print('After del 0',l6)\n",
+    "l6.remove(4)\n",
+    "print('After remove 4',l6)\n",
+    "print('The value of the position 0 is: %i'%l6.pop(0))\n",
+    "print(l6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise\n",
     "\n",
     "Let's recap what we have seen on list with the following steps:\n",
@@ -958,15 +1021,7 @@
      ]
     }
    ],
-   "source": [
-    "listEx1 = [1,2,3,4]\n",
-    "listEx2 = listEx1.copy()\n",
-    "listEx1[0] = 10\n",
-    "listEx1[-1] = 40\n",
-    "listEx2.extend([70,80])\n",
-    "a=listEx2.extend(listEx1)\n",
-    "print(a)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -983,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -994,7 +1049,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "type of t1: <class 'tuple'>, type of t2: <class 'tuple'>\n",
+      "type of t1: <class 'tuple'>, type of t2: <class 'tuple'>, type of t3: <class 'tuple'>\n",
       "First element of t1: 1\n",
       "Len of t2: 3\n"
      ]
@@ -1003,7 +1058,8 @@
    "source": [
     "t1=(1,2,3)\n",
     "t2=('a','b',4)\n",
-    "print('type of t1: %s, type of t2: %s'%(type(t1),type(t2)))\n",
+    "t3=tuple()\n",
+    "print('type of t1: %s, type of t2: %s, type of t3: %s'%(type(t1),type(t2),type(t3)))\n",
     "print('First element of t1: %i'%t1[0])\n",
     "print('Len of t2: %i'%len(t2))"
    ]
@@ -1018,10 +1074,11 @@
    "source": [
     "## Dictionary\n",
     "\n",
-    "A Dictionary is a collection of key-value couples. In python a dictionary has two main features:\n",
+    "A Dictionary is a collection of key-value couples. In python a dictionary has three main features:\n",
     "\n",
     "  - Keys are unique\n",
-    "  - You can acces an element using is key"
+    "  - You can acces an element using is key\n",
+    "  - Keys are hashes"
    ]
   },
   {
@@ -1045,6 +1102,13 @@
     "d1=dict()\n",
     "d2={'a':1,'b':2,'c':3}\n",
     "print('Type of d1:%s and d2:%s'%(type(d1),type(d2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets create a big dictionary using the letters of the alphabet:"
    ]
   },
   {
@@ -1279,6 +1343,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I can also do the same thing with lists:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
@@ -1306,10 +1377,7 @@
     "if 'd' in ld:\n",
     "    print('ok')\n",
     "else :\n",
-    "    print('no')\n",
-    "    \n",
-    "d2['l'] = 60\n",
-    "d2"
+    "    print('no')"
    ]
   },
   {
@@ -1345,7 +1413,7 @@
     }
    ],
    "source": [
-    "#FYI you can also make the previous check in one line, line ifelse in R\n",
+    "#FYI you can also make the previous check in one line, like ifelse in R\n",
     "print('One liner of if else')\n",
     "print(\"The key 'd' is in d2\") if 'd' in d2 else print(\"No 'd' in d2\")"
    ]
@@ -1384,10 +1452,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dictFruit = {'60':'apple','50':'ananas','100':'banana'}\n",
-    "dictFruit['50']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1402,12 +1467,7 @@
      ]
     }
    ],
-   "source": [
-    "dictFruit2 = {'apple':50,'ananas':60,'banana':100}\n",
-    "for key,value in dictFruit2.items():\n",
-    "    if value == 50:\n",
-    "        print(key)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2730,6 +2790,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python sets are... sets. So we have all the proprerty of sets:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
@@ -2957,13 +3024,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "dictLast = {'a':1,'b':2,'c':3,'d':4}\n",
-    "setLast = set(dictLast.values())\n",
-    "setLast.add(10)\n",
-    "tupleLast = (1,2,3,4)\n",
-    "setLast.difference(set(tupleLast))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
