--- a/Lesson_1-2.ipynb
+++ b/Lesson_1-2.ipynb
@@ -240,30 +240,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a is equal to__ 1 and b is equal to 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=1\n",
-    "b='2'\n",
-    "s_test = f'a is equal to__ {a} and b is equal to {b}'\n",
-    "print(s_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "slideshow": {
@@ -300,6 +276,41 @@
    },
    "source": [
     "**NOTE:** Again please take note that in python we always start from **0**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Interlude**: Since the first part of this lesson, we are using %s to format string.\n",
+    "Let's see other methods to do the same thing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is equal to__ 1 and b is equal to 2\n",
+      "a is equal to__ 1 and b is equal to 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "b='2'\n",
+    "s_test = f'a is equal to__ {a} and b is equal to {b}'\n",
+    "print(s_test)\n",
+    "s_test2 ='a is equal to__ {pippo} and b is equal to {pluto}'.format(pippo=a,pluto=b)\n",
+    "print(s_test2)"
    ]
   },
   {
@@ -611,6 +622,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note**: be aware of how you use the increment. In the above exaple i=10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -755,23 +773,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-51-19af9c90a3a7>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-19af9c90a3a7>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "l\n",
+      "t\n",
+      "o\n"
      ]
     }
    ],
    "source": [
     "for i in 'pluto':\n",
     "    if i == 'u':\n",
-    "        a=1\n",
-    "    continue\n",
+    "        continue\n",
     "    else:\n",
     "        print(i)\n"
    ]
@@ -844,16 +863,7 @@
      ]
     }
    ],
-   "source": [
-    "fibList = [1,2]\n",
-    "sumEl = 0\n",
-    "while sumEl<100:\n",
-    "    fibList.append(fibList[-1]+fibList[-2])\n",
-    "    sumEl = 0\n",
-    "    for elem in fibList:\n",
-    "        sumEl = sumEl + elem\n",
-    "print(fibList)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -987,7 +997,7 @@
     "    print('Equal')\n",
     "else:\n",
     "    print('More')\n",
-    "    \n",
+    "#is the same of    \n",
     "if j<9:\n",
     "    print('Less')\n",
     "else:\n",
@@ -1110,7 +1120,7 @@
    "source": [
     "## Real-life Example\n",
     "\n",
-    "I want to loop over some Shakespeare's books and try to count the number of row in each book.\n",
+    "I want to loop over some Shakespeare's books and try to count the number of rows in each book.\n",
     "\n",
     "I want to create a Dictionary to recap the results.\n",
     "\n",
@@ -1178,7 +1188,7 @@
     "dictCountLines = dict()\n",
     "\n",
     "for curFile in os.listdir(fold):\n",
-    "    logger.error('The name of the file is %s',curFile)\n",
+    "    logger.info('The name of the file is %s',curFile)\n",
     "    #count = 0\n",
     "    fullPath = os.path.join(fold,curFile)\n",
     "    logger.info('The path of the file is %s',fullPath)\n",
@@ -1209,9 +1219,12 @@
     "  * Contains all the values that have an even key, except for the key 2\n",
     "  * Contains the value for the key 5\n",
     "    \n",
-    "We want also to print the key each time we hit an odd key\n",
+    "We want also to print the key each time we hit an odd key.\n",
     "\n",
-    "Than use a while loop to empty the set. You have to stop when the set is empty.\n",
+    "Than create a list with the values of our set and use a while loop to empty the set. \n",
+    "You have to:\n",
+    "  * print each time the value that you have removed\n",
+    "  * stop when the set is empty.\n",
     "\n",
     "**HINT #1:** `%2` it's module two\n",
     "\n",
@@ -1224,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1250,32 +1263,25 @@
       "The key is odd:21\n",
       "The key is odd:23\n",
       "The key is odd:25\n",
-      "{'x', 'z', 't', 'r', 'h', 'n', 'd', 'f', 'j', 'e', 'v', 'p', 'l'}\n"
+      "{'e', 'h', 'z', 'j', 't', 'x', 'p', 'd', 'n', 'r', 'f', 'v', 'l'}\n",
+      "Removing e\n",
+      "Removing h\n",
+      "Removing z\n",
+      "Removing j\n",
+      "Removing t\n",
+      "Removing x\n",
+      "Removing p\n",
+      "Removing d\n",
+      "Removing n\n",
+      "Removing r\n",
+      "Removing f\n",
+      "Removing v\n",
+      "Removing l\n",
+      "[]\n"
      ]
     }
    ],
-   "source": [
-    "import string \n",
-    "letters = string.ascii_lowercase\n",
-    "print(letters)\n",
-    "startDict = {}\n",
-    "for i,curLet in enumerate(letters):\n",
-    "    startDict[i+1] = curLet\n",
-    "#pp(startDict)\n",
-    "retSet = set()\n",
-    "for k,v in startDict.items():\n",
-    "    if k%2==0:\n",
-    "        if k ==2:\n",
-    "            print('The key is 2')\n",
-    "        else:\n",
-    "            retSet.add(v)\n",
-    "    else:\n",
-    "        print('The key is odd:%i'%k)\n",
-    "        if k==5:\n",
-    "            retSet.add(v)\n",
-    "print(retSet) \n",
-    "#print(startDict)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1283,28 +1289,9 @@
    "source": [
     "## End Exercise #2\n",
     "\n",
-    "Comment the code block below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'a'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-87-758157dc89a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0md_es\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'b'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0md_es\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'a'"
-     ]
-    }
-   ],
-   "source": [
-    "d_es = {'a':1,'b':2}\n"
+    "Comment the code block below\n",
+    "\n",
+    "**Hint**: random will extract a random number in a range"
    ]
   },
   {
@@ -2384,15 +2371,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "retDict = {}\n",
-    "for curLet in retList:\n",
-    "    if curLet not in retDict:\n",
-    "        retDict[curLet] = 0\n",
-    "    retDict[curLet] += 1\n",
-    "\n",
-    "retDict"
-   ]
+   "source": []
   }
  ],
  "metadata": {
